--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.15",
     "classnames": "^2.3.1",
     "file-saver": "^2.0.5",
-    "react": "^17.0.2",
     "node-sass": "^4.14.1",
+    "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
     "react-d3-tree": "^2.0.1",
     "react-date-picker": "^8.1.1",
-    "react-responsive-carousel": "^3.2.18",
-    "react-router": "^5.2.0",
-    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
+    "react-responsive-carousel": "^3.2.18",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7"
   }
 }
